--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jiawen KE"
   avatar           : "profile.png"
-  bio              : "MPhil Student in Social Science in HKUST"
+  bio              : "MPhil Student in Social Science,HKUST"
   location         : "Clear Water Bay, Hong Kong"
   email            : jiawen.ke@connect.ust.hk
   github           : "jiawenke"
