--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Jiawen KE"
   avatar           : "profile.png"
   bio              : "MPhil Student in Social Science,HKUST"
-  location         : "Clear Water Bay, Hong Kong"
+  location         : "Clear Water Bay,HK"
   email            : jiawen.ke@connect.ust.hk
   github           : "jiawenke"
   twitter          : "jiawen_ke"
